--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 <h2 style="color:rgb(228, 231, 6);font-family:'Courier New', Courier, monospace">Ademas....</h2>
 <p style="color:black;font-family:fantasy;text-align: justify;">Contamos con buenas instalaciones y un establecimiento o lugar limpio ademas de respetar y usar todas las medidas de seguridad ante la pandemia, se le permite al cliente comprar o adquirir varios objetos o alimentos que estan presentes en la sala de espera por si se lo desea y por su puesto que seria sin un sistema de peso el cual se puede calcular o registrar los datos que usted sabe para determinar o saber si usted tiene sobrepeso o tiene un peso totalmente adecuado y aceptable el cual es totalmente facil de acceder pues desde esta pagina solo se necesita visualizarlo y colocar nuestro numero de peso para darle click y saber nuestro resultado si es que necesitamos una consulta o comprobar lo sano que estamos. </p>
 <img src="ProductosClinica.jpg" height="300px">
+<img src="file:///C:/Users/windows%2010/OneDrive/Documentos/Pagina%20Web%20Para%20La%20Practica%20Profesional/EstablecimientoClinica.jpg" height="300px">
 </body>
 </html>
